Added PostgresReadonlyMcpServer